<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientRegActivity" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/clientlabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Client Type" />
                    
                   	<RadioGroup
					        android:id="@+id/radioTypeGroup"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content" >
					 
					        <RadioButton
					            android:id="@+id/radioIndividual"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/radio_individual" 
					            android:checked="true" />
					        
					        <TextView
                        		android:id="@+id/branchnamelabel"
                        		android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:text="Branch Name" />

                    		<Spinner
		                        android:id="@+id/branchnamespinner"
		                        android:layout_width="match_parent"
		                        android:layout_height="32dp"
		                        android:entries="@array/branch_arrays"
		                        android:prompt="@string/branch_prompt" />
					 
					        <RadioButton
					            android:id="@+id/radioGroup"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/radio_group" />
					        
					        <TextView
		                        android:id="@+id/groupnamelabel"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:text="GroupName" />

                   			 <EditText
		                        android:id="@+id/groupname"
		                        android:layout_width="match_parent"
		                        android:layout_height="wrap_content"
		                        android:ems="10" >

                        		<requestFocus />
                    		</EditText>
					 
					    </RadioGroup>



                    <TextView
                        android:id="@+id/officerlabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loan Officer" />

                    <EditText
                        android:id="@+id/loanofficer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="First Name" />

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Middle Name" />

                    <EditText
                        android:id="@+id/middlename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" />

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Family Name" />

                    <EditText
                        android:id="@+id/familyname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" />

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gender" />
					<RadioGroup
					        android:id="@+id/radioSex"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content" >
					 
					        <RadioButton
					            android:id="@+id/radioMale"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/radio_male" 
					            android:checked="true" />
					 
					        <RadioButton
					            android:id="@+id/radioFemale"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/radio_female" />
					 
					    </RadioGroup>

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Marital Status" />

                    <Spinner
                        android:id="@+id/marital_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/marital_status_arrays"
                        android:prompt="@string/marital_prompt" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="submitClientRegistry"
                        android:text="Submit" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>